data-git/worldmodel/test/requirement-test-fluents.p.pddl.SatPlanP.stderr

/var/lib/myfrdcsa/codebases/internal/verber/data/worldmodel/test/requirement-test-fluents.d.pddl: syntax error in line 3, ':FLUENTS':
requirement %s not supported by this IPP version :FLUENTS

Memory limit exceeded: bb system call, OR Time limit exceeded: bb system call, OR bb internal error
