data-git/worldmodel/test/requirement-test-fluents.p.pddl.LPG.sol.SOL

; Version LPG-td-1.0
; Seed 21690473
; Command line: /var/lib/myfrdcsa/codebases/internal/verber/data/planner-library/lpg-td-1.0 -o requirement-test-fluents.d.pddl -f requirement-test-fluents.p.pddl -out /var/lib/myfrdcsa/codebases/internal/verber/data/worldmodel/test/requirement-test-fluents.p.pddl.LPG.sol -speed 
; Problem requirement-test-fluents.p.pddl
; Actions having STRIPS duration
; Time 0.01
; Search time 0.01
; Parsing time 0.00
; Mutex time 0.00
; NrActions 1

0:   (ACTION1 OBJ1 OBJ2) [1]
